--- a/webapp/dockerfile
+++ b/webapp/dockerfile
@@ -1,7 +1,6 @@
 FROM node:13.12.0-alpine
 
 WORKDIR /app
-
 ENV PATH /app/node_modules.bin:$PATH
 
 # install app dependencies
@@ -13,6 +12,8 @@ RUN npm install react-vis
 
 # add app
 COPY . ./
+
+EXPOSE 8000
 
 # start app
 CMD ["npm", "start"]
