--- a/webapp/dockerfile
+++ b/webapp/dockerfile
@@ -6,13 +6,16 @@ ENV PATH /app/node_modules.bin:$PATH
 # install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
-RUN npm install --silent
+RUN npm ci --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
 # add app
 COPY . ./
 
-EXPOSE 8000
+RUN npm run build
 
-# start app
-CMD ["npm", "start"]
+# production environment
+FROM nginx:stable-alpine
+COPY --from=build /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
