--- a/speedtest/dockerfile
+++ b/speedtest/dockerfile
@@ -11,4 +11,4 @@ RUN pip3 install speedtest-cli fire psycopg2
 COPY ./speedtest.py ./
 
 # Create entry point
-CMD ["python3", "speedtest.py", "--host=$HOST", "--port=$PORT"]
+CMD ["python3", "speedtest.py", "--host=$POSTGRES_HOST", "--port=$POSTGRES_PORT"]
