--- a/webapi/dockerfile
+++ b/webapi/dockerfile
@@ -1,3 +1,15 @@
 FROM node:12.18.0-alpine
 
+WORKDIR /app
+ENV PATH /app/node_modules.bin:$PATH
+
+COPY package.json ./
+COPY package-lock.json ./
+RUN npm ci --silent
+
+# add app
+COPY . ./
+
 EXPOSE 7000
+
+CMD [ "npm", "start", "$POSTGRES_HOST", "$POSTGRES_PORT" ]
