--- a/speedtest/dockerfile
+++ b/speedtest/dockerfile
@@ -3,7 +3,7 @@ FROM python:3.7-alpine
 WORKDIR /app
 
 RUN apk update && \
-    apk add --virtual build-deps gcc python-dev musl-dev && \
+    apk add --virtual build-deps gcc python3-dev musl-dev && \
     apk add postgresql-dev
 
 RUN pip3 install speedtest-cli fire psycopg2
@@ -11,4 +11,4 @@ RUN pip3 install speedtest-cli fire psycopg2
 COPY ./speedtester.py ./
 
 # Create entry point
-CMD ["python3", "speedtester.py", "--host=$POSTGRES_HOST", "--port=$POSTGRES_PORT", "--pwd=$POSTGRES_PASSWORD" ]
+CMD [ "python", "-u", "speedtester.py", "$POSTGRES_PASSWORD", "$POSTGRES_HOST", "$POSTGRES_PORT" ]
