--- a/webapi/package.json
+++ b/webapi/package.json
@@ -9,6 +9,7 @@
   "author": "Felix Geilert",
   "license": "Apache-2.0",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.2.1"
   }
