--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,5 +42,5 @@ services:
         depends_on: 
             - speedtest-api
         environment:
-            API_HOST: "speedtest-api"
+            API_HOST: "192.168.0.185"
             API_PORT: 7000
