--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^4.5.0",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
+    "rc-slider": "^9.3.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
     "react-vis": "^1.11.7",
     "style-loader": "^1.2.1"
