--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-vis": "^1.11.7",
     "style-loader": "^1.2.1"
